<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_48px"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_wb_sunny_black_24dp"
            android:title="@string/weather" />
        <item
            android:id="@+id/nav_hiking"
            android:icon="@drawable/ic_terrain_black"
            android:title="@string/hiking" />
        <item
            android:id="@+id/nav_bio"
            android:icon="@drawable/ic_profile_24px"
            android:title="@string/bio" />
        <item
            android:id="@+id/nav_bmi"
            android:icon="@drawable/ic_bmi"
            android:title="@string/bmi" />
        <item
            android:id="@+id/nav_calorie"
            android:icon="@drawable/ic_food_24px"
            android:title="@string/calorie_calculator" />
    </group>

</menu>