<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="8dp"
            >
            <ImageView
                android:id="@+id/bio_form_img"
                android:layout_width="@dimen/profile_img"
                android:layout_height="@dimen/profile_img"
                android:src="@drawable/profile_placeholder"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                />
            <Button
                android:id="@+id/bio_form_upload_img"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_image"
                android:textColor="@color/white"
                android:backgroundTint="@color/holo_orange_light"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="5"
            android:paddingTop="8dp"
            android:paddingLeft="3dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_font_size"
                android:textColor="@color/navy"
                android:text="@string/enter_sex"
                />
            <Spinner
                android:id="@+id/bio_form_sex"
                android:textSize="@dimen/medium_small_font_size"
                android:paddingTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_height"
                android:textColor="@color/navy"
                android:paddingTop="16dp"
                android:textSize="@dimen/small_font_size"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">
                <Spinner
                    android:id="@+id/bio_form_ft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/small_font_size"
                    android:textColor="@color/navy"
                    android:text="@string/enter_feet"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">
                <Spinner
                    android:id="@+id/bio_form_inch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/small_font_size"
                    android:textColor="@color/navy"
                    android:text="@string/enter_inches"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="16dp">
                <TextView
                    android:textSize="@dimen/small_font_size"
                    android:text="@string/weight_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/bio_form_weight_label"
                    android:textColor="@color/navy"
                    android:textSize="@dimen/small_medium_font_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <SeekBar
                android:id="@+id/bio_form_weight"
                android:max="380"
                android:min="80"
                android:progress="150"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:thumbTint="@color/navy"
                android:progressTint="@color/navy"
                />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/bio_form_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="@color/holo_blue_light"
        android:text="@string/submit"
        />
</LinearLayout>